samples/_failures_safe/1761469348_6c3518_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a8bbb88.c: In function ‘main’:
./samples/SAFE/__tmp_6a8bbb88.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_6a8bbb88.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if
      |                 ^
./samples/SAFE/__tmp_6a8bbb88.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a8bbb88.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a8bbb88.c:153:17: error: expected declaration or statement at end of input
